--- a/foundry.toml
+++ b/foundry.toml
@@ -1,7 +1,9 @@
-[default]
+[profile.default]
 src = 'src'
 out = 'out'
 libs = ['lib']
 solc = "0.8.10"
+
+remappings=["forge-std/=lib/forge-std/src/","solmate/=lib/solmate/src"]
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
